corrected layout issue due to iframe

--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,7 @@ section {
 
 .history-section iframe {
     display: block;
+    width: 100%;
     margin: 1em auto;
     
 }
@@ -120,13 +121,10 @@ section {
 
 .evolution-section img {
     display: block;
-    max-width: 20%;
+    max-width: 100%;
     margin: 1em auto;
 }
 
-.evolution-section .float-img {
-    float: right;
-}
 
 .future-section {
     padding-top: 1em;
@@ -139,7 +137,7 @@ section {
 
 .future-section img {
     display: block;
-    max-width: 60%;
+    max-width: 100%;
     margin: 1em auto;
 }
 
@@ -197,4 +195,5 @@ section {
         display: block;
         text-align: center;
     }
+
 }
